tests/parsing/smtlib/v2.6/errors/015_sorted_var_unclosed_2.expected
File "tests/parsing/smtlib/v2.6/errors/015_sorted_var_unclosed_2.smt2", line 2, character 24-27:
2 | (assert (forall ((x int foo)) x))
                            ^^^
Error while parsing a sorted variable, read the symbol 'foo',
      but expected a closing parenthesis.
